# ResumeMate

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  README.md  README_zh.md  TROUBLESHOOTING.md  analysis_agent_alternatives.md  app.py  init_db.py  pyproject.toml  requirements.txt  test_contact_info.py
.claude/: settings.local.json
.claude/commands/pm/: issue-status.md  prd-edit.md
.claude/rules/: frontmatter-operations.md  standard-patterns.md
.gitea/workflows/: ci-cd.yml
.github/: agents  copilot-instructions.md
.github/chatmodes/: debug.chatmode.md
.github/instructions/: javascript.instructions.md  markdown.instructions.md  python.instructions.md
.github/prompts/: development_plan.prompt.md
.github/workflows/: deploy-pages.yml
docs/: GITHUB_COPILOT_GUIDE.md  LITELLM_SIMPLE_REFACTOR.md  performance-optimization-report.md  phase4-completion-report.md
plans/: development_plan.md  prototype.html  qa_vector_cache_plan.md  requirement.md
scripts/: .env.admin.example  .env.docker.example  .env.main.example  Dockerfile  Dockerfile.admin  Dockerfile.main  build-backend.sh  build-docker.sh  build_and_deploy.sh  deploy.sh  deploy_backend.sh  deploy_frontend.sh  docker-compose.yml  docker-run.sh  migrate_images_to_webp.py  requirements-admin.txt  requirements-docker.txt  requirements-main.txt  requirements.txt  run-cms.sh  setup_dev_env.sh  start.sh  sync-requirements.sh
src/: __init__.py
src/backend/: __init__.py  logging_config.py  models.py  processor.py
src/backend/agents/: __init__.py  analysis.py  evaluate.py  openai_adapter.py
src/backend/cms/: __init__.py  admin_app.py  ai_assistant.py  git_manager.py  language_manager.py  models.py  processor.py  project_manager.py
src/backend/infographics/: __init__.py  admin_app.py  ai_assistant.py  data_manager.py  git_manager.py  language_manager.py  models.py  project_manager.py
src/backend/tools/: __init__.py  answer_quality.py  contact.py  rag.py
src/frontend/: index.html  infographics.html  llms.txt  robots.txt
src/frontend/data/: infographics.json  projects.json  resume-en.json  resume-zh.json  version.json
src/frontend/data/languages/: en.json  zh-TW.json
src/frontend/static/css/: infographics.css  projects.css  responsive.css
src/frontend/static/js/: hamburger.js  infographics.js  main.js  multilingual.js  (+2 more)
tests/integration/: test_integration.py
tests/performance/: test_performance.py
tests/unit/: examples_infographics_ai.py  test_ai_assistant.py  test_ai_assistant_integration.py  test_analysis_agent.py  test_debug_runresult.py  test_git_manager.py  test_infographics.py  test_rag_tools_local_embedding.py  test_runresult_fix.py  test_sample.py  test_workflow_verification.py
tests/ux/: test_user_experience.py
