[project]
name = "resumemate"
version = "0.1.0"
description = "AI-driven resume agent platform"
authors = [
    {name = "Brian Han", email = "sacahan@gmail.com"},
]
dependencies = [
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
