[project]
name = "resumemate"
version = "0.1.0"
description = "AI-driven resume agent platform"
authors = [{ name = "Brian Han", email = "sacahan@gmail.com" }]
dependencies = [
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "gradio>=5.44.1,<6.0.0",
    "pydantic>=2.10,<2.12",
    "python-dotenv>=1.0.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "openai-agents==0.4.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "litellm>=1.79.3",
]
requires-python = ">=3.10"

readme = "README.md"
license = { file = "LICENSE" }

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=23.0.0", "isort>=5.0.0", "flake8>=6.0.0"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
